Bug 978239 - Synchronize WindowsRealTimeClock to unmess RTCP timestamps. r=jesup